Only show bookable slots that start on the next valid start date
(Which is two working days from the current day).

Also use `biz` instead of `business_time` because it actually works.

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -6,7 +6,7 @@
       <h2>Choose available slot</h2>
 
       <div class="calendar">
-        <div data-module="AppointmentAvailabilityCalendar" data-events=".slots-data"></div>
+        <div data-module="AppointmentAvailabilityCalendar" data-events=".slots-data" data-default-date="<%= BookableSlot.next_valid_start_date %>"></div>
         <input type="hidden" name="available-slots-json" class="slots-data" value="<%= @available_slots_json %>">
         <div class="hide">
           <%= f.text_field :start_at, data: { 'selected-start': true }, class: 't-start-at' %>
