Customers can attempt an appointment and either be eligible or not
- Seperate page to take first_name, last_name, date_of_birth, and
defined_contribution_pension.
- If they are not eligible the agent is told.
- If they are then they can continue to book an appointment as usual.

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Create new appointment</h1>
+<h1>Book an appointment</h1>
 
-<%= form_for @appointment, layout: :basic do |f| %>
+<%= form_for [@appointment_attempt, @appointment], layout: :basic do |f| %>
   <div class="row form-group">
     <div class="col-md-12">
       <h2>Choose available slot</h2>
