--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= active_link_to 'Manage guiders', users_path, wrap_tag: :li %>
   <% end %>
   <% if current_user.agent? %>
-    <%= active_link_to 'Create appointments', new_appointment_path, wrap_tag: :li %>
+    <%= active_link_to 'Book appointment', new_appointment_attempt_path, wrap_tag: :li %>
   <% end %>
 <% end %>
 
