Make DOB form element into three text fields
- CustomerAge JS module now correctly works out the
  customer's age
- Use same dob field in both places on the book appointment
  form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,3 +69,14 @@
 .fc-view-container.error {
   border: 1px solid #a94442;
 }
+
+.form-dob {
+  .form-group {
+    display: inline;
+    margin-bottom: 0;
+  }
+
+  .form-dob-label {
+    margin-bottom: 10px;
+  }
+}
