--- a/app/views/appointment_attempts/new.html.erb
+++ b/app/views/appointment_attempts/new.html.erb
@@ -3,9 +3,7 @@
 <%= form_for @appointment_attempt, layout: :basic do |f| %>
   <%= f.text_field :first_name, class: 't-first-name' %>
   <%= f.text_field :last_name, class: 't-last-name' %>
-  <%= f.date_field :date_of_birth, class: 't-date-of-birth', data: { module: 'CustomerAge', output: '.js-customer-age' } %>
-  <div class="bg-info js-customer-age">
-  </div>
+  <%= render 'shared/date_of_birth_form_field', form: f %>
   <%= f.check_box :defined_contribution_pot, class: 't-defined-contribution-pot' %>
   <%= f.submit 'Next', class: 't-next' %>
 <% end %>
