--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@ Welcome
 
 <div class="action-panel" data-action-panel>
   <form method="post">
-    <button class="btn btn-primary" data-action-panel-go>
+    <button class="btn btn-primary" data-action-panel-save>
       <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Save changes to
       <b>
         <span data-action-panel-event-count>0 events</span>
@@ -25,5 +25,6 @@ Welcome
     <button class="btn btn-danger" data-action-panel-undo-all>
       <span class="glyphicon glyphicon-erase" aria-hidden="true"></span> Undo <b>all</b> changes
     </button>
+    <input type="hidden" name="event-changes" id="event-changes">
   </form>
 </div>
