Guider can view their own calendar
This shows appointments scoped to the current user.

This ends at the edit appointment screen which remains to be
implemented.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,9 @@
 @import 'select2';
 @import 'select2-bootstrap';
 @import 'fullcalendar';
+@import 'fullcalendar-scheduler';
 @import 'daterangepicker-bs3';
+@import 'qTip2';
 @import 'components/*';
 
 .fc-unthemed {
