--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <% end %>
   <% if current_user.agent? %>
     <%= active_link_to 'Book appointment', new_appointment_attempt_path, wrap_tag: :li %>
+    <%= active_link_to 'Calendar', calendar_path, wrap_tag: :li %>
   <% end %>
 <% end %>
 
