--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 <% content_for :navbar_items do %>
   <% if current_user.resource_manager? %>
     <%= active_link_to 'Manage guiders', users_path, wrap_tag: :li %>
+    <%= active_link_to 'Holidays', holidays_path, wrap_tag: :li %>
   <% end %>
   <% if current_user.agent? %>
     <%= active_link_to 'Book appointment', new_appointment_attempt_path, wrap_tag: :li %>
