--- a/app/views/shared/_date_of_birth_form_field.html.erb
+++ b/app/views/shared/_date_of_birth_form_field.html.erb
@@ -1,7 +1,7 @@
 <% start_year = 120.years.ago %>
 
 <div class="form-dob" data-module="CustomerAge" data-output-id="js-customer-age">
-  <div class="form-dob-label"><b>Date of birth</b></div>
+  <div class="form-dob-label"><b>Date of birth<%= required_label %></b></div>
   <label>
     <span class="sr-only">Date of birth</span> Day
     <%=
