--- a/app/views/shared/_date_of_birth_form_field.html.erb
+++ b/app/views/shared/_date_of_birth_form_field.html.erb
@@ -11,7 +11,7 @@
         use_label: false,
         value: form.object.date_of_birth.try(:day),
         placeholder: 'DD',
-        class: 'js-dob-day t-date-of-birth-day',
+        class: 'js-dob-day form-dob__input t-date-of-birth-day',
         pattern: '[0-9]*',
         min: 1,
         max: 31,
@@ -28,7 +28,7 @@
         use_label: false,
         value: form.object.date_of_birth.try(:month),
         placeholder: 'MM',
-        class: 'js-dob-month t-date-of-birth-month',
+        class: 'js-dob-month form-dob__input t-date-of-birth-month',
         pattern: '[0-9]*',
         min: 1,
         max: 12
@@ -44,7 +44,7 @@
         use_label: false,
         value: form.object.date_of_birth.try(:year),
         placeholder: 'YYYY',
-        class: 'js-dob-year t-date-of-birth-year',
+        class: 'js-dob-year form-dob__input form-dob__input--year t-date-of-birth-year',
         pattern: '[0-9]*',
         min: start_year.year,
         max: Date.today.year
