--- a/app/views/shared/_date_of_birth_form_field.html.erb
+++ b/app/views/shared/_date_of_birth_form_field.html.erb
@@ -1,56 +1,58 @@
 <% start_year = 120.years.ago %>
 
 <div class="form-dob" data-module="CustomerAge" data-output-id="js-customer-age">
-  <div class="form-dob-label"><b>Date of birth<%= required_label %></b></div>
-  <label>
-    <span class="sr-only">Date of birth</span> Day
-    <%=
-      form.number_field(
-        'date_of_birth(3i)',
-        id: "#{form.object_name}_date_of_birth_3i",
-        use_label: false,
-        value: form.object.date_of_birth.try(:day),
-        placeholder: 'DD',
-        class: 'js-dob-day form-dob__input t-date-of-birth-day',
-        pattern: '[0-9]*',
-        min: 1,
-        max: 31,
-        'aria-describedby': 'dob-hint'
-      )
-    %>
-  </label>
-  <label>
-    <span class="sr-only">Date of birth</span> Month
-    <%=
-      form.number_field(
-        'date_of_birth(2i)',
-        id: "#{form.object_name}_date_of_birth_2i",
-        use_label: false,
-        value: form.object.date_of_birth.try(:month),
-        placeholder: 'MM',
-        class: 'js-dob-month form-dob__input t-date-of-birth-month',
-        pattern: '[0-9]*',
-        min: 1,
-        max: 12
-      )
-    %>
-  </label>
-  <label>
-    <span class="sr-only">Date of birth</span> Year
-    <%=
-      form.number_field(
-        'date_of_birth(1i)',
-        id: "#{form.object_name}_date_of_birth_1i",
-        use_label: false,
-        value: form.object.date_of_birth.try(:year),
-        placeholder: 'YYYY',
-        class: 'js-dob-year form-dob__input form-dob__input--year t-date-of-birth-year',
-        pattern: '[0-9]*',
-        min: start_year.year,
-        max: Date.today.year
-      )
-    %>
-  </label>
-  <span class="bg-info" id="js-customer-age"></span>
-  <span class="help-block" id="dob-hint">For example, 31 3 1950</span>
+  <%= field_with_errors_wrapper(form, :date_of_birth) do %>
+    <div class="form-dob-label"><b>Date of birth</b></div>
+    <label>
+      <span class="sr-only">Date of birth</span> <%= required_label(:day) %>
+      <%=
+        form.number_field(
+          'date_of_birth(3i)',
+          id: "#{form.object_name}_date_of_birth_3i",
+          use_label: false,
+          value: form.object.date_of_birth.try(:day),
+          placeholder: 'DD',
+          class: 'js-dob-day t-date-of-birth-day',
+          pattern: '[0-9]*',
+          min: 1,
+          max: 31,
+          'aria-describedby': 'dob-hint'
+        )
+      %>
+    </label>
+    <label>
+      <span class="sr-only">Date of birth</span> <%= required_label(:month) %>
+      <%=
+        form.number_field(
+          'date_of_birth(2i)',
+          id: "#{form.object_name}_date_of_birth_2i",
+          use_label: false,
+          value: form.object.date_of_birth.try(:month),
+          placeholder: 'MM',
+          class: 'js-dob-month t-date-of-birth-month',
+          pattern: '[0-9]*',
+          min: 1,
+          max: 12
+        )
+      %>
+    </label>
+    <label>
+      <span class="sr-only">Date of birth</span> <%= required_label(:year) %>
+      <%=
+        form.number_field(
+          'date_of_birth(1i)',
+          id: "#{form.object_name}_date_of_birth_1i",
+          use_label: false,
+          value: form.object.date_of_birth.try(:year),
+          placeholder: 'YYYY',
+          class: 'js-dob-year t-date-of-birth-year',
+          pattern: '[0-9]*',
+          min: start_year.year,
+          max: Date.today.year
+        )
+      %>
+    </label>
+    <span class="bg-info" id="js-customer-age"></span>
+    <span class="help-block" id="dob-hint">For example, 31 3 1950</span>
+  <% end %>
 </div>
