Improving file structure of scss files and adding scss-lint
- moved each distinct 'component' into it's own scss file
- fixed linting issues
- added scss-lint to rake

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,101 +1,3 @@
-@import 'govuk_admin_template';
-@import 'select2';
-@import 'select2-bootstrap';
-@import 'fullcalendar';
-@import 'fullcalendar-scheduler';
-@import 'daterangepicker-bs3';
-@import 'qTip2';
-@import 'components/*';
-
-.fc-unthemed {
-  .fc-today {
-    background: #fff;
-  }
-
-  .close {
-    font-size: 18px;
-    height: auto;
-    padding: 0;
-    position: absolute;
-    right: 2px;
-    top: 2px;
-    z-index: 2;
-  }
-}
-
-.calendar {
-  clear: both;
-}
-
-.table button.sort {
-  border: 0;
-  background: transparent;
-  color: #337ab7;
-  padding: 0;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-.select-all {
-  display: none;
-
-  .js & {
-    display: inline;
-  }
-}
-
-.inline-button-to-container {
-  display:inline-block;
-}
-
-.guider__action-panel {
-  background: #ddd;
-  border-top: 1px solid #000;
-  bottom: 0;
-  display: none;
-  font-size: 16px;
-  font-weight: bold;
-  left: 0;
-  padding: 1em;
-  position: fixed;
-  text-align: center;
-  width: 100%;
-}
-
-.appointment-availability-calendar {
-  min-height: 500px;
-}
-
-.fc-view-container.error {
-  border: 1px solid #a94442;
-}
-
-.form-dob {
-  .form-group {
-    display: inline;
-    margin-bottom: 0;
-  }
-
-  .field_with_errors {
-    label {
-      display:inline-block;
-    }
-    .form-dob-label {
-      color: $state-danger-text;
-    }
-  }
-
-  .form-dob-label {
-    margin-bottom: 10px;
-  }
-}
-
-.form-dob__input {
-  width: 64px;
-}
-
-.form-dob__input--year {
-  width: 90px;
-}
+@import "lib/colours";
+@import "vendor/vendor";
+@import "components/*";
