Make date of birth readonly after eligiblity check
Before this, it was possible to provide an eligible date of birth
on the first page of the 'Book Appointment' journey, which is the
point at which the eligibility checks take place. However you
could then edit the date of birth to an ineligible age on the
second screen – resulting in an ineligible appointment being
successfully booked.

An unlikely scenario to occur, but this just prevents that from
happening.

--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -25,7 +25,7 @@
       <%= f.email_field :email, class: 't-email' %>
       <%= f.telephone_field :phone, class: 't-phone', label: required_label(:phone) %>
       <%= f.telephone_field :mobile, class: 't-mobile' %>
-      <%= render 'shared/date_of_birth_form_field', form: f %>
+      <%= render 'shared/date_of_birth_form_field', form: f, readonly: true %>
     </div>
     <div class="col-md-6">
       <%= f.text_field :memorable_word, class: 't-memorable-word', placeholder: 'Pension Wise will use this each time the customer is called', label: required_label(:memorable_word) %>
