Resource managers can manage holidays
- Holidays can be created
- Holidays can be deleted

--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Holidays</h1>
 
 <div class="calendar">
-  <div data-module="HolidaysCalendar"></div>
+  <div
+     data-module="HolidaysCalendar"
+     data-holidays-path="<%= holidays_path %>"
+     data-new-holiday-path="<%= new_holiday_path %>">
+  </div>
 </div>
