--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,4 +1,13 @@
-<h1>Edit appointment</h1>
+<div class="page-header">
+  <ol class="breadcrumb">
+    <li><a href="<%= root_path %>">Home</a></li>
+    <li><a href="<%= calendar_path %>">Calendar</a></li>
+    <li class="active">Edit Appointment</li>
+  </ol>
+
+  <h1>Edit appointment</h1>
+</div>
+
 <%= render 'shared/required_fields_note' %>
 <%= form_for @appointment, layout: :basic do |f| %>
   <%= render partial: 'personal_details_form', locals: { f: f } %>
