Add missing classes to DOB fields

--- a/app/views/shared/_date_of_birth_form_field.html.erb
+++ b/app/views/shared/_date_of_birth_form_field.html.erb
@@ -13,7 +13,7 @@
           use_label: false,
           value: form.object.date_of_birth.try(:day),
           placeholder: 'DD',
-          class: 'js-dob-day t-date-of-birth-day',
+          class: 'form-dob__input js-dob-day t-date-of-birth-day',
           pattern: '[0-9]*',
           min: 1,
           max: 31,
@@ -31,7 +31,7 @@
           use_label: false,
           value: form.object.date_of_birth.try(:month),
           placeholder: 'MM',
-          class: 'js-dob-month t-date-of-birth-month',
+          class: 'form-dob__input js-dob-month t-date-of-birth-month',
           pattern: '[0-9]*',
           min: 1,
           max: 12,
@@ -48,7 +48,7 @@
           use_label: false,
           value: form.object.date_of_birth.try(:year),
           placeholder: 'YYYY',
-          class: 'js-dob-year t-date-of-birth-year',
+          class: 'form-dob__input form-dob__input--year js-dob-year t-date-of-birth-year',
           pattern: '[0-9]*',
           min: start_year.year,
           max: Date.today.year,
