downcase guider title

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Manage Guiders</h1>
+<h1>Manage guiders</h1>
 
 <div data-module="GuidersMultiAction">
   <div id="guiders" data-module="SortableList" data-default-order='{"value": "name", "order": "asc"}' data-config='<%= sortable_list_config(@groups) %>'>
