--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="page-header">
   <ol class="breadcrumb">
     <li><a href="<%= root_path %>">Home</a></li>
-    <li><a href="<%= calendar_path %>">Calendar</a></li>
-    <li class="active">Edit Appointment</li>
+    <li><a href="<%= calendar_path %>">My appointments</a></li>
+    <li class="active">Edit appointment</li>
   </ol>
 
   <h1>Edit appointment</h1>
