--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <ol class="breadcrumb">
     <li><a href="<%= root_path %>">Home</a></li>
-    <li><a href="<%= users_path %>">Manage Guiders</a></li>
+    <li><a href="<%= users_path %>">Manage guiders</a></li>
     <li class="active">Manage groups</li>
   </ol>
 
