--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,3 +1,10 @@
-<h1>Holidays</h1>
+<div class="page-header">
+  <ol class="breadcrumb">
+    <li><a href="<%= root_path %>">Home</a></li>
+    <li class="active">Holidays</li>
+  </ol>
+
+  <h1>Holidays</h1>
+</div>
 
 <div data-module="HolidaysCalendar"></div>
