--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="page-header">
   <ol class="breadcrumb">
     <li><a href="<%= root_path %>">Home</a></li>
-    <li><a href="<%= users_path %>">Manage Guiders</a></li>
-    <li class="active">Manage schedules for &quot;<%=@guider.name %>&quot;</li>
+    <li><a href="<%= users_path %>">Manage guiders</a></li>
+    <li class="active">Manage schedules for <%=@guider.name %></li>
   </ol>
 
-  <h1>Manage schedules for "<%=@guider.name %>"</h1>
+  <h1>Manage schedules for <%=@guider.name %></h1>
 </div>
 
 <div class="row">
