--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,3 +1,10 @@
-<h1>My appointments</h1>
+<div class="page-header">
+  <ol class="breadcrumb">
+    <li><a href="<%= root_path %>">Home</a></li>
+    <li class="active">My appointments</li>
+  </ol>
+
+  <h1>My appointments</h1>
+</div>
 
 <div data-module="GuiderAppointmentsCalendar" data-default-date="<%= Time.zone.now %>"></div>
