--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <ol class="breadcrumb">
     <li><a href="<%= root_path %>">Home</a></li>
-    <li><a href="<%= users_path %>">Manage Guiders</a></li>
+    <li><a href="<%= users_path %>">Manage guiders</a></li>
     <li><a href="<%= edit_user_path(@guider) %>">Edit User &quot;<%=@guider.name %>&quot;</a></li>
     <li class="active">New Schedule</li>
   </ol>
