--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Manage guiders</h1>
+<div class="page-header">
+  <ol class="breadcrumb">
+    <li><a href="<%= root_path %>">Home</a></li>
+    <li class="active">Manage guiders</li>
+  </ol>
+
+  <h1>Manage guiders</h1>
+</div>
 
 <div data-module="GuidersMultiAction">
   <div id="guiders" data-module="SortableList" data-default-order='{"value": "name", "order": "asc"}' data-config='<%= sortable_list_config(@groups) %>'>
