Adding a status to appointments
- only available on edit appointment screen
- defaults to 'pending' on creation of an appointment

--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -54,5 +54,14 @@
         }
       )
     %>
+
+    <%=
+      f.select(
+        :status,
+        friendly_options(Appointment.statuses),
+        options = {},
+        { class: 't-status' }
+      ) if defined?(edit) && edit
+    %>
   </div>
 </div>
