Showing cancelled appointments on the guiders' calendar
- if it's one of the two cancelled states, then it will
  highlight them in red on the guider's calendar

--- a/app/assets/stylesheets/components/_calendars.scss
+++ b/app/assets/stylesheets/components/_calendars.scss
@@ -23,3 +23,10 @@ $calendar-today-background: $color-white;
 .fc-view-container.error {
   border: 1px solid $state-danger-text;
 }
+
+.fc-event {
+  &.cancelled {
+    background: $brand-danger;
+    opacity: .8;
+  }
+}
