--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -7,4 +7,4 @@
   <h1>Holidays</h1>
 </div>
 
-<div data-module="HolidaysCalendar"></div>
+<div data-module="HolidaysCalendar" data-default-date="<%= Time.zone.now %>"></div>
