Use 24 hour time format in calendars and date range pickers

--- a/app/views/holidays/new.html.erb
+++ b/app/views/holidays/new.html.erb
@@ -15,7 +15,7 @@
             days: 1
           },
           locale: {
-            format: 'DD/MM/YYYY h:mm A'
+            format: 'DD/MM/YYYY HH:mm'
           }
         }
       }
