--- a/app/views/holidays/new.html.erb
+++ b/app/views/holidays/new.html.erb
@@ -1,4 +1,13 @@
-<h1>Create a holiday</h1>
+<div class="page-header">
+  <ol class="breadcrumb">
+    <li><a href="<%= root_path %>">Home</a></li>
+    <li class="active"><a href="<%= holidays_path %>">Holidays</a></li>
+    <li class="active">Create a holiday</li>
+  </ol>
+
+  <h1>Create a holiday</h1>
+</div>
+
 <%= form_for @holiday, layout: :basic do |f| %>
   <%= f.text_field :title, class: 't-title' %>
   <% date_range = "#{@holiday.try(:start_at)} - #{@holiday.try(:end_at)}", 't-date-range' %>
