Remove six week restriction on schedules
- Schedules are not editable if they end_at < tomorrow
- Schedules have no six week restrictions anymore
- Destroy all bookable slots when regenerating
- Bookable slots are still generated for six weeks

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -49,7 +49,7 @@
   </thead>
   <tbody>
   <% @schedules.each do |schedule| %>
-    <tr data-schedule-start="<%= schedule.start_at %>" data-schedule-end="<%= schedule.end_at %>">
+    <tr class='t-schedule' data-schedule-start="<%= schedule.start_at %>" data-schedule-end="<%= schedule.end_at %>">
       <td>
         <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> <%= schedule.title %>
         <% unless schedule.modifiable? %>
