Bind guiders on resource manager calendar
This just adds the necessary scaffolding and bindings for displaying
the resource manager's view of appointments. At the moment we're just
binding guiders.

--- a/app/assets/stylesheets/components/_calendars.scss
+++ b/app/assets/stylesheets/components/_calendars.scss
@@ -1,5 +1,21 @@
 $calendar-today-background: $color-white;
 
+.guiders-appointments-calendar {
+  .fc-resource-cell {
+    height: 150px;
+    white-space: nowrap;
+  }
+
+  th {
+    border-width: 0;
+    overflow: hidden;
+  }
+
+  .fc-resource-cell > div {
+    transform: translateY(120px) rotate(-90deg);
+  }
+}
+
 .fc-unthemed {
   .fc-today {
     background: $calendar-today-background;
