Show field update and message activities on appointments

--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -1,6 +1,7 @@
 <div class="row form-group">
   <div class="col-md-12">
     <h2>Personal Details</h2>
+    <%= render 'shared/required_fields_note' %>
   </div>
   <div class="col-md-6">
     <%= f.text_field :first_name, class: 't-first-name', label: required_label(:first_name) %>
