Ensure that calendar stays on current view/date across page impressions
- Storing a cookie of the current view and date of each calendar
- Config for fullcalendar on initialisation gets overriden with values from cookie
- Remembers current defaultView/defaultDate settings for a year (across browser sessions)

--- a/app/views/appointments/reschedule.html.erb
+++ b/app/views/appointments/reschedule.html.erb
@@ -15,6 +15,7 @@
       <h2>Choose available slot <%= required_label %></h2>
       <p class="text-danger hide" id="slot-error">Please choose a slot</p>
       <div
+        id="AppointmentAvailabilityCalendar"
         class="appointment-availability-calendar"
         data-module="AppointmentAvailabilityCalendar"
         data-error-id="slot-error"
