--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -7,4 +7,4 @@
   <h1>My appointments</h1>
 </div>
 
-<div data-module="GuiderAppointmentsCalendar" data-default-date="<%= Time.zone.now %>"></div>
+<div id="GuiderAppointmentsCalendar" data-module="GuiderAppointmentsCalendar" data-default-date="<%= Time.zone.now %>"></div>
