--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -15,6 +15,7 @@
   </div>
 </div>
 <div
+  id="HolidaysCalendar"
   class="holiday-calendar"
   data-module="HolidaysCalendar"
   data-holidays-path="<%= holidays_path %>"
