--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -8,6 +8,7 @@
 </div>
 
 <div
+  id="GuidersAppointmentsCalendar"
   class="guiders-appointments-calendar js-calendar"
   data-config='{"editable": true, "eventDurationEditable": true, "slotDuration": "00:10:00"}'
   data-module="GuidersAppointmentsCalendar"
