--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -8,8 +8,28 @@
 </div>
 
 <div
-  class="guiders-appointments-calendar"
+  class="guiders-appointments-calendar js-calendar"
   data-config='{"editable": true, "eventDurationEditable": true, "slotDuration": "00:10:00"}'
   data-module="GuidersAppointmentsCalendar"
   data-default-date="<%= Time.zone.now %>">
+</div>
+
+<div class="action-panel t-action-panel" data-action-panel>
+  <form method="post">
+    <button class="btn btn-primary t-save" data-action-panel-save>
+      <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Save changes to
+      <b>
+        <span data-action-panel-event-count>0 events</span>
+      </b>
+    </button>
+
+    <button class="btn btn-warning" data-action-panel-undo-one>
+      <span class="glyphicon glyphicon-step-backward" aria-hidden="true"></span> Undo last change
+    </button>
+
+    <button class="btn btn-danger" data-action-panel-undo-all>
+      <span class="glyphicon glyphicon-erase" aria-hidden="true"></span> Undo <b>all</b> changes
+    </button>
+    <input type="hidden" name="event-changes" id="event-changes">
+  </form>
 </div>
