--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <% if current_user.agent? %>
     <%= active_link_to 'Book appointment', new_appointment_attempt_path, wrap_tag: :li %>
     <%= active_link_to 'My appointments', calendar_path, wrap_tag: :li %>
+    <%= active_link_to 'Search', search_appointments_path, wrap_tag: :li %>
   <% end %>
 <% end %>
 
