--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row form-group">
   <div class="col-md-12">
-    <%= form_for @search, layout: :basic, method: 'GET', url: {action: :search} do |f| %>
+    <%= form_for @search, layout: :basic, method: 'GET', url: { action: :search } do |f| %>
       <%= f.text_field :q, label: 'Search', class: 't-q', placeholder: 'Search by first name, last name, or booking reference.' %>
       <%=
         f.text_field(
@@ -42,14 +42,16 @@
     </tr>
   </thead>
   <tbody>
-    <% @search.results.each do |result| %>
+    <% @results.each do |result| %>
+      <% result = AppointmentPresenter.new(result) %>
       <tr class='t-result'>
         <td class='t-id'><%= result.id %></td>
         <td><%= result.first_name %></td>
         <td><%= result.last_name %></td>
-        <td><%= result.start_at %></td>
+        <td><%= result.date %></td>
         <td><%= result.status %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+<%= paginate @results %>
