--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -31,25 +31,25 @@
   </div>
 </div>
 
-<table class="table table-striped table-bordered table-hover">
+<table id="results" class="table table-striped table-bordered table-hover" data-module="SortableList" data-config='{"valueNames": ["id", "first_name", "last_name", "date", "status"]}' data-default-order='{"value": "id", "order": "asc"}'>
   <thead>
     <tr>
-      <th>Reference</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Date</th>
-      <th>Status</th>
+      <th><span class="sort" data-sort="id">Reference</span></th>
+      <th><span class="sort" data-sort="first_name">First Name</span></th>
+      <th><span class="sort" data-sort="last_name">Last Name</span></th>
+      <th><span class="sort" data-sort="date">Date</span></th>
+      <th><span class="sort" data-sort="status">Status</span></th>
     </tr>
   </thead>
-  <tbody>
+  <tbody class="list">
     <% @results.each do |result| %>
       <% result = AppointmentPresenter.new(result) %>
       <tr class='t-result'>
-        <td class='t-id'><%= result.id %></td>
-        <td><%= result.first_name %></td>
-        <td><%= result.last_name %></td>
-        <td><%= result.date %></td>
-        <td><%= result.status %></td>
+        <td class='t-id'><span class="id"><%= result.id %></span></td>
+        <td><span class="first_name"><%= result.first_name %></span></td>
+        <td><span class="last_name"><%= result.last_name %></span></td>
+        <td><span class="date"><%= result.date %></span></td>
+        <td><span class="status"><%= result.status %></span></td>
       </tr>
     <% end %>
   </tbody>
