--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -51,7 +51,12 @@
         <td><span class="last_name"><%= result.last_name %></span></td>
         <td><span class="date"><%= result.date %></span></td>
         <td><span class="status"><%= result.status %></span></td>
-        <td><a href="<%= url_for(edit_appointment_path(result.id)) %>" class="btn  btn-primary">Edit</a></td>
+        <td>
+          <%= link_to edit_appointment_path(result), title: 'Edit appointment', class: 'btn btn-info' do %>
+            <span class='glyphicon glyphicon-pencil' aria-hidden="true"></span>
+            <span class="sr-only">Edit appointment</span>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
