--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -39,7 +39,7 @@
       <th><span class="sort" data-sort="last_name">Last Name</span></th>
       <th><span class="sort" data-sort="date">Date</span></th>
       <th><span class="sort" data-sort="status">Status</span></th>
-      <th width="1%"></th>
+      <th width="1%">Actions</th>
     </tr>
   </thead>
   <tbody class="list">
