--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -51,10 +51,14 @@
         <td><span class="last_name"><%= result.last_name %></span></td>
         <td><span class="date"><%= result.date %></span></td>
         <td><span class="status"><%= result.status %></span></td>
-        <td>
+        <td nowrap="true">
           <%= link_to edit_appointment_path(result), title: 'Edit appointment', class: 'btn btn-info' do %>
-            <span class='glyphicon glyphicon-pencil' aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             <span class="sr-only">Edit appointment</span>
+          <% end %>
+          <%= link_to appointment_reschedule_path(result), title: 'Reschedule appointment', class: 'btn btn-info' do %>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+            <span class="sr-only">Reschedule appointment</span>
           <% end %>
         </td>
       </tr>
