--- a/app/views/resource_calendars/show.html.erb
+++ b/app/views/resource_calendars/show.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <div class="action-panel t-action-panel" data-action-panel>
-  <form method="post">
+  <%= form_tag batch_update_appointments_path, method: :patch do %>
     <button class="btn btn-primary t-save" data-action-panel-save>
       <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Save changes to
       <b>
@@ -30,6 +30,6 @@
     <button class="btn btn-danger" data-action-panel-undo-all>
       <span class="glyphicon glyphicon-erase" aria-hidden="true"></span> Undo <b>all</b> changes
     </button>
-    <input type="hidden" name="event-changes" id="event-changes">
-  </form>
+    <input type="hidden" name="changes" id="event-changes">
+  <% end %>
 </div>
