Altered breadcrumb for edit/reschedule appointment
- altered both to have a parent of 'search'
- this doesn't quite work 100% when you edit an appointment
  coming from a guider's calendar, but will look to improve this
  at another time

--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <ol class="breadcrumb">
     <li><a href="<%= root_path %>">Home</a></li>
-    <li><a href="<%= calendar_path %>">My appointments</a></li>
+    <li><a href="<%= search_appointments_path %>">Search</a></li>
     <li class="active">Edit appointment</li>
   </ol>
 
