--- a/app/views/appointments/reschedule.html.erb
+++ b/app/views/appointments/reschedule.html.erb
@@ -1,6 +1,7 @@
 <div class="page-header">
   <ol class="breadcrumb">
     <li><a href="<%= root_path %>">Home</a></li>
+    <li><a href="<%= search_appointments_path %>">Search</a></li>
     <li class="active">Reschedule an appointment</li>
   </ol>
 
