--- a/app/views/appointments/reschedule.html.erb
+++ b/app/views/appointments/reschedule.html.erb
@@ -2,10 +2,10 @@
   <ol class="breadcrumb">
     <li><a href="<%= root_path %>">Home</a></li>
     <li><a href="<%= search_appointments_path %>">Search</a></li>
-    <li class="active">Reschedule an appointment</li>
+    <li class="active">Reschedule an appointment for <%= @appointment.name %></li>
   </ol>
 
-  <h1>Reschedule an appointment</h1>
+  <h1>Reschedule an appointment for <%= @appointment.name %></h1>
 </div>
 
 <%= render 'shared/required_fields_note' %>
