Resource managers see holidays as background events in resource calendar

--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -17,7 +17,7 @@
 <div
   class="holiday-calendar"
   data-module="HolidaysCalendar"
-  data-holidays-path="<%= holidays_path %>"
+  data-holidays-path="<%= merged_holidays_path %>"
   data-new-holiday-path="<%= new_holiday_path %>"
   data-default-date="<%= Time.zone.now %>"
  ></div>
