--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
       <ul class="dropdown-menu">
         <%= active_link_to 'Groups & schedules', users_path, wrap_tag: :li %>
         <%= active_link_to 'Holidays & unavailability', holidays_path, wrap_tag: :li %>
+        <%= active_link_to 'Generate a report', new_report_path, wrap_tag: :li %>
       </ul>
     </li>
   <% end %>
