--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -9,53 +9,12 @@
     <%= f.email_field :email, class: 't-email' %>
     <%= f.telephone_field :phone, class: 't-phone', label: required_label(:phone) %>
     <%= f.telephone_field :mobile, class: 't-mobile' %>
-    <%= render 'shared/date_of_birth_form_field', form: f, readonly: true %>
+    <%= render 'shared/date_of_birth_form_field', form: f if defined?(edit) && edit %>
   </div>
   <div class="col-md-6">
     <%= f.text_field :memorable_word, class: 't-memorable-word', placeholder: 'Pension Wise will use this each time the customer is called', label: required_label(:memorable_word) %>
     <%= f.text_area :notes, class: 't-notes', rows: 6, placeholder: 'Is the customer hard of hearing? Is English their first language? etc.' %>
     <%= f.check_box :opt_out_of_market_research, class: 't-opt-out-of-market-research' %>
-    <%=
-      f.select(
-        :where_did_you_hear_about_pension_wise,
-        where_did_you_hear_about_pension_wise_options(@appointment),
-        {
-          label: required_label('Where did you hear about Pension Wise?'),
-          include_blank: true
-        },
-        {
-          class: 't-where-did-you-hear-about-pension-wise',
-          data: {
-            module: 'AdvancedSelect',
-            config: {
-              tags: true,
-              placeholder: 'Type a value in here if it is not included in the list'
-            }
-          }
-        }
-      )
-    %>
-    <%=
-      f.select(
-        :who_is_your_pension_provider,
-        who_is_your_pension_provider_options(@appointment),
-        {
-          label: 'Who is your pension provider?',
-          include_blank: true
-        },
-        {
-          class: 't-who-is-your-pension-provider',
-          data: {
-            module: 'AdvancedSelect',
-            config: {
-              tags: true,
-              placeholder: 'Type a value in here if it is not included in the list'
-            }
-          }
-        }
-      )
-    %>
-
     <%=
       f.select(
         :status,
