--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Appointments <span class="caret"></span></a>
     <ul class="dropdown-menu">
       <%= active_link_to 'Search', search_appointments_path, wrap_tag: :li %>
-      <%= active_link_to 'Book appointment', new_appointment_attempt_path, wrap_tag: :li %>
+      <%= active_link_to 'Book appointment', new_appointment_path, wrap_tag: :li %>
 
       <% if current_user.resource_manager? %>
         <%= active_link_to 'Allocations', resource_calendar_path, wrap_tag: :li %>
