--- a/app/views/shared/_date_of_birth_form_field.html.erb
+++ b/app/views/shared/_date_of_birth_form_field.html.erb
@@ -1,9 +1,7 @@
 <% start_year = 120.years.ago %>
-<% readonly = local_assigns[:readonly] || false %>
 
 <div class="form-dob" data-module="CustomerAge" data-output-id="js-customer-age">
   <%= field_with_errors_wrapper(form, :date_of_birth) do %>
-    <div class="form-dob-label"><b>Date of birth</b></div>
     <label>
       <span class="sr-only">Date of birth</span> <%= required_label(:day) %>
       <%=
@@ -17,8 +15,7 @@
           pattern: '[0-9]*',
           min: 1,
           max: 31,
-          'aria-describedby': 'dob-hint',
-          readonly: readonly
+          'aria-describedby': 'dob-hint'
         )
       %>
     </label>
@@ -34,8 +31,7 @@
           class: 'form-dob__input js-dob-month t-date-of-birth-month',
           pattern: '[0-9]*',
           min: 1,
-          max: 12,
-          readonly: readonly
+          max: 12
         )
       %>
     </label>
@@ -51,8 +47,7 @@
           class: 'form-dob__input form-dob__input--year js-dob-year t-date-of-birth-year',
           pattern: '[0-9]*',
           min: start_year.year,
-          max: Date.today.year,
-          readonly: readonly
+          max: Date.today.year
         )
       %>
     </label>
