--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -15,12 +15,15 @@
     </div>
     <div class="col-md-12">
       <h2>Choose available slot <%= required_label %></h2>
-      <p class="text-danger hide" id="slot-error">Please choose a slot</p>
+      <% if @appointment.errors[:guider].any? %>
+        <p class="text-danger js-slot-unavailable-message t-slot-unavailable-message">
+          Unable to assign appointment to a slot, please chooose a slot.
+        </p>
+      <% end %>
       <div
           id="AppointmentAvailabilityCalendar"
           class="appointment-availability-calendar"
           data-module="AppointmentAvailabilityCalendar"
-          data-error-id="slot-error"
           data-available-slots-path="<%= bookable_slots_available_path %>"
           data-default-date="<%= BookableSlot.next_valid_start_date %>"
       ></div>
