--- a/app/views/activities/_activity_feed.html.erb
+++ b/app/views/activities/_activity_feed.html.erb
@@ -4,7 +4,7 @@
 
     <div class="activity-feed">
       <div class="well js-message-form">
-        <%= form_for MessageActivity.new(appointment: appointment, owner: appointment.guider), url: appointment_activities_path(appointment), remote: true do |f| %>
+        <%= form_for MessageActivity.new(appointment: appointment, owner: appointment.guider), url: activities_path(appointment_id: appointment.id), remote: true do |f| %>
           <div class="input-group">
             <%= f.text_field :message, placeholder: 'Add an action to keep others in the loop', class: 'form-control js-message t-message' %>
             <span class="input-group-btn">
@@ -16,10 +16,7 @@
           </div>
         <% end %>
       </div>
-      <ul class="activity-feed__list"
-        data-module='activity-feed-poller'
-        data-interval="<%= poll_interval_milliseconds %>"
-        data-url="<%= appointment_activities_path(appointment) %>">
+      <ul class="activity-feed__list" data-module="activity-feed" data-config='{"event": "appointment_activity_<%= appointment.id %>"}'>
         <%= render appointment.activities.first if appointment.activities.present? %>
       </ul>
 
