Highlight the current logged in guider on company calendar
- Highlight in yellow the column for the current guider

--- a/app/views/company_calendars/show.html.erb
+++ b/app/views/company_calendars/show.html.erb
@@ -11,3 +11,9 @@
   data-module="guiders-appointments-calendar"
   data-default-date="<%= Time.zone.now %>">
 </div>
+
+<style>
+[data-resource-id="<%= current_user.id %>"] {
+  background: #fff87c !important;
+}
+</style>
